##############################################
##	Beato Command & Conquer Generals(tm)    ##
##############################################
## WWVegas ( WestWood Lib )


add_definitions( -DENABLE_USE_OPENGL )


#
#
#
set( WW3D2_DX8_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8caps.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8caps.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8fvf.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8fvf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8indexbuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8indexbuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8polygonrenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8polygonrenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8renderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8renderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8texman.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8texman.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8vertexbuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8vertexbuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8webbrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8webbrowser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8wrapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/DirectX/dx8wrapper.h 
    )

#
#
#
set( WW3D2_OGL_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/OpenGL/OpenGLwrapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/OpenGL/OpenGLwrapper.h
    )

######
# WW3D2
######
set( WW3D2_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/aabtreebuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/aabtreebuilder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/aabtree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/aabtree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/agg_def.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/agg_def.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/animobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/animobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/assetmgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/assetmgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bitmaphandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bitmaphandler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bmp2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bmp2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/boxrobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/boxrobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bw_render.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bwrender.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bw_render.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/bwrender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/camera.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/camera.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/classid.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/collect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/collect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/colorspace.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/coltest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/coltest.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/coltype.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/composite.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/composite.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/dazzle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/dazzle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ddsfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ddsfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/decalmsh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/decalmsh.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/decalsys.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/decalsys.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/distlod.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/distlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/dllist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/dynamesh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/dynamesh.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/font3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/font3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/formconv.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/formconv.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/FramGrab.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/framgrab.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hanim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hanimmgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hanimmgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hcanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hcanim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hlod.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hmdldef.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hmdldef.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hmorphanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hmorphanim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hrawanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/hrawanim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/htree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/htree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/htreemgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/htreemgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/intersec.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/intersec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/intersec.inl
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/inttest.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/layer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/layer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/light.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/lightenvironment.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/lightenvironment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/light.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/line3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/line3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/mapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/mapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matpass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matpass.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matrixmapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/matrixmapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshbuild.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshbuild.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/mesh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshdam.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshdam.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshgeometry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshgeometry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/mesh.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshmatdesc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshmatdesc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshmdl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshmdl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/meshmdlio.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/metalmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/metalmap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/missingtexture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/missingtexture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/motchan.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/motchan.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/nullrobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/nullrobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_buf.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_buf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_emt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_emt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_ldr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/part_ldr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/pivot.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/pivot.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/pointgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/pointgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/polyinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/polyinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/predlod.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/predlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/prim_anim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/prim_anim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/projector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/projector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/proto.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/proto.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/proxy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/rddesc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/render2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/render2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/render2dsentence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/render2dsentence.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/renderobjectrecycler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/renderobjectrecycler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/rendobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/rendobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/RequiredAssets
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/rinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/rinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ringobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ringobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/robjlist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/scene.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/scene.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/segline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/segline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/seglinerenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/seglinerenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/shader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/shader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/shattersystem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/shattersystem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/snappts.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/snapPts.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sortingrenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sortingrenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/soundrobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/soundrobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sphereobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sphereobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sr_util.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/sr_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/statistics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/statistics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/streak.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/streak.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/streakRender.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/streakRender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/stripoptimizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/stripoptimizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/surfaceclass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/surfaceclass.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texfcach.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texfcach.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texproject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texproject.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/textdraw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/textdraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texturefile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texturefile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/textureloader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/textureloader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texturethumbnail.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/texturethumbnail.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/txt2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/txt2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/txt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/txt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/vertmaterial.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/vertmaterial.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/visrasterizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/visrasterizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_dep.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_dep.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3derr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3dexclusionlist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3dexclusionlist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_file.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_obsolete.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_util.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/w3d_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3d2.dsp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3dformat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3dformat.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3dids.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WW3D2/ww3dtrig.h
    )

######
# WWAudio
######
set( WWAUDIO_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AABTreeSoundCullClass.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AudibleSound.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AudibleSound.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AudioEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AudioSaveLoad.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/AudioSaveLoad.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/FilteredSound.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/FilteredSound.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Listener.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Listener.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/listenerhandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/listenerhandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/LogicalListener.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/LogicalListener.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/LogicalSound.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/LogicalSound.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/PriorityVector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/sound2dhandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/sound2dhandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Sound3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Sound3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/sound3dhandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/sound3dhandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundChunkIDs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundCullObj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/soundhandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/soundhandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundPseudo3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundPseudo3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundScene.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundScene.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundSceneObj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/SoundSceneObj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/soundstreamhandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/soundstreamhandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Threads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Threads.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Utils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/Utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/WWAudio.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/WWAudio.dsp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWAudio/WWAudio.h
    )

######
# WWDebug
######
set( WWDEBUG_SOURCES 
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwdebug.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwdebug.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwhack.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwmemlog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwmemlog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwprofile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDebug/wwprofile.h
    )

######
# WWDownload
######
set( WWDOWLOAD_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/Download.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/DownloadDebug.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/downloaddefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/Download.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/FTP.CPP
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/ftpdefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/ftp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/registry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/Registry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/urlBuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWDownload/urlBuilder.h
    )

######
# WWLib
######
set( WWLIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/always.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/argv.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/argv.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/b64pipe.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/b64pipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/b64straw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/b64straw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/base64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/base64.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bfiofile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/binheap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bittype.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blitblit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blowfish.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blowfish.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blowpipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/blwstraw.h
    #${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bool.h ( disabled )
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/borlandc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bound.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bsearch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bsurface.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/buff.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bufffile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/bufffile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/buff.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/CallbackHook.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/chunkio.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/chunkio.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_convert.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/convert.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_convert.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/Convert.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/cpudetect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/cpudetect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/crc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/crc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/crcpipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/crcstraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/cstraw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/cstraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/data.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/data.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ddraw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/dib.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/draw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/dsurface.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/dsurface.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ffactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ffactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/fixed.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/font.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/gcd_lcm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/gcd_lcm.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hashcalc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hash.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/HASHLIST.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hashtab.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hashtemplate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hsv.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/hsv.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/iff.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/incdec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/index.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ini.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ini.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/inisup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/int.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/int.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/iostruct.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/jshell.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/keyboard.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/keyboard.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/LaunchWeb.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/LaunchWeb.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/lcw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/lcw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/lcwpipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/listnode.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/load.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mempool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/misc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mixfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mixfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mmsys.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_mono.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mono.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/monodrvr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_mono.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mono.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mpmath.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mpmath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mpu.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mpu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/msgloop.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/msgloop.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/multilist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/multilist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mutex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/mutex.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/noinit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/Notify.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/nstrdup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/nstrdup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ntree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/obscure.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/palette.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/palette.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pcx.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pcx.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pipe.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pk.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pk.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pkpipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/pkstraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/Point.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ramfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ramfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/random.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/random.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rawfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rawfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rc4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rc4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rcfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rcfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/readline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/readline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/realcrc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/realcrc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/refcount.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/refcount.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/ref_ptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/registry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/registry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rgb.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rgb.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rlerle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rndstraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rndstrng.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rndstrng.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rng.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/rsacrypt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/sampler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/sampler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/search.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/sha.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/sha.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/shapeset.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/shapipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/sharebuf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/shastraw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/Signaler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/simplevec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/slist.h #SLIST.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/slnode.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/slnode.h #SLNODE.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/smartptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/srandom.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/srandom.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/stimer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/stimer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/stl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/straw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/straw.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/strtok_r.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/strtok_r.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/Surface.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/surfrect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/swap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/systimer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/systimer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/tagblock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/TagBlock.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/targa.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/targa.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/textfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/textfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/thread.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/thread.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_timer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_timer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/timer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/trackwin.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/trackxy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/trect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/trim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/trim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/uarray.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/vector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/vector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/verchk.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/verchk.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/visualc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/watcom.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/widestring.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/widestring.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/plat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/plat.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/WWCOMUtil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/WWCOMUtil.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwfile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwfont.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwfont.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwlib.dsp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwmouse.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwstring.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/wwstring.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/_xmouse.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xmouse.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xpipe.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xpipe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xstraw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/XSTRAW.H
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xsurface.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWLib/xsurface.h
    )

######
# WWMath
######
set( WWMATH_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/aabox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/aabox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/aabtreecull.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/aabtreecull.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/aaplane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/cardinalspline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/cardinalspline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/castres.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/catmullromspline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/catmullromspline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathaabox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathaabox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathaabtri.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmath.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathfrustum.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathfrustum.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathinlines.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathobbobb.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathobbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathobbtri.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathplane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathplane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/colmathsphere.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/cullsys.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/cullsys.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/culltype.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/curve.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/curve.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/euler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/euler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/frustum.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/frustum.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/gridcull.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/gridcull.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/hermitespline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/hermitespline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/lineseg.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/lineseg.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/lookuptable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/lookuptable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/matrix4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/obbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/obbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/ode.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/ode.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/plane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/pot.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/pot.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/quat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/quat.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/rect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/sphere.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/tcbspline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/tcbspline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/tri.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/tri.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/v3_rnd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/v3_rnd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vector2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vector2i.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vector3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/Vector3i.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vector4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vehiclecurve.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vehiclecurve.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/vp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/wwmath.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/wwmath.dsp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/wwmath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWMath/wwmathids.h
    )

######
# WWSaveLoad
######
set( WWSAVELOAD_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionclassids.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definition.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionfactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionfactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionfactorymgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionfactorymgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definition.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionmgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/definitionmgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/editable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/parameter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/parameter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/parameterlist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/parametertypes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/persistfactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/persistfactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/persist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/pointerremap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/pointerremap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/postloadable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveload.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveload.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveloadids.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveloadstatus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveloadstatus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveloadsubsystem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/saveloadsubsystem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/simpledefinitionfactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/simpleparameter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/twiddler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/twiddler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/wwsaveload.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/wwsaveload.dsp
    ${CMAKE_CURRENT_SOURCE_DIR}/WWSaveLoad/wwsaveload.h
    )

######
# Wwutil
######
set( WWUTIL_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Wwutil/mathutil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wwutil/mathutil.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wwutil/miscutil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wwutil/miscutil.h
    )


set( WWCOMMON_SOURCES_ALL 
    ${WW3D2_DX8_SOURCES}
    ${WW3D2_OGL_SOURCES}
    ${WW3D2_SDL_SOURCES}
    ${WW3D2_SOURCES}
    ${WWAUDIO_SOURCES}
    ${WWDEBUG_SOURCES}
    ${WWDOWLOAD_SOURCES}
    ${WWLIB_SOURCES}
    ${WWMATH_SOURCES}
    ${WWSAVELOAD_SOURCES}
    ${WWUTIL_SOURCES}
    )

add_library( WWVegas STATIC ${WWCOMMON_SOURCES_ALL} )
target_precompile_headers( WWVegas 
    PUBLIC 
        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/GameEngine/Include/Precompiled/PreRTS.h>" 
    PRIVATE 
        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/WWprecompiled.h>"
         )

#target_include_directories( WWCommon PUBLIC ${CMAKE_SOURCE_DIR}/Libraries/Include )
